hphp/test/quick/class_constant_array.php.expectf
HipHop Fatal error: Arrays are not allowed in class constants in %s on line 6
